Enable scrolling on mobile by removing position: fixed

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -7,7 +7,7 @@
         box-sizing: border-box;
         width: 100vw;
         will-change: transform;
-        // position: fixed;
+        position: fixed;
         @media screen and (max-width: 1024px) {
             position: relative;
         }
