--- a/assets/css/style-guide.scss
+++ b/assets/css/style-guide.scss
@@ -49,9 +49,12 @@ main {
     box-sizing: border-box;
     overflow: hidden;
     width: 100vw;
-    // position: fixed;
+    position: fixed;
     height: 100%;
     // background: var(--color-white);
+    @media screen and (max-width: 1024px) {
+        position: relative;
+    }   
 }
 
 /* Selection */
